# polars_explorer

./: .gitignore  explore.py  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
data/: sample.csv
output/: result.parquet
src/polars_csv_explorer/: __init__.py  __main__.py
