[project]
name = "polars-csv-explorer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.42.0",
]

[build-system]
requires = ["uv_build>=0.7.0,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.7.0"

[tool.uv.build-backend]
module-name = "explore"

[project.scripts]
polars-explorer = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
